# Sparkles

./: .gitignore  CMakeLists.txt
assignements/hw0/: CMakeLists.txt
assignements/hw0/include/nori/core/: bitmap.h  block.h  math.h  vector.h
assignements/hw0/include/nori/shapes/: mesh.h
assignements/hw0/scenes/hw0/Tests/: sphere-mesh.xml
assignements/hw0/scenes_hw0/Tests/: sphere-analytic.exr  sphere-analytic.xml
assignements/hw0/src/core/: chi2test.cpp  math.cpp
assignements/hw0/src/shapes/: mesh.cpp  obj.cpp  shape.cpp  sphere.cpp
assignements/hw0/src/warp/: warp.cpp
assignements/hw1/include/nori/emitters/: emitter.h  point.h
assignements/hw1/include/nori/integrators/: simple.h
assignements/hw1/scenes/hw1/Final/: finalhw1-point.xml
assignements/hw1/scenes/hw1/References/: sphere-mesh-ref.exr
assignements/hw1/src/emitters/: directional.cpp  emitter.cpp  point.cpp
assignements/hw2/include/nori/integrators/: direct.h
assignements/hw2/include/nori/shapes/: mesh.h  shape.h  sphere.h
assignements/hw2/src/integrators/: ao.cpp
assignements/hw2/src/shapes/: mesh.cpp  shape.cpp  sphere.cpp
assignments/hw0/include/nori/accelerators/: bvh.h
assignments/hw0/include/nori/bsdfs/: bsdf.h
assignments/hw0/include/nori/cameras/: camera.h
assignments/hw0/include/nori/core/: bbox.h  gui.h  parser.h  ray.h  rfilter.h  scene.h  timer.h  transform.h
assignments/hw0/include/nori/emitters/: emitter.h
assignments/hw0/include/nori/integrators/: integrator.h  normals.h
assignments/hw0/include/nori/samplers/: sampler.h
assignments/hw0/include/nori/shapes/: mesh.h  object.h  sphere.h
assignments/hw0/include/nori/warp/: warp.h
assignments/hw0/scenes/hw0/Final/: finalhw0.xml
assignments/hw0/scenes/hw0/References/: sphere-analytic-ref.exr
assignments/hw0/src/accelerators/: accel.cpp
assignments/hw0/src/bsdfs/: dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp
assignments/hw0/src/core/: bitmap.cpp  block.cpp  proplist.cpp  scene.cpp
assignments/hw0/src/shapes/: mesh.cpp  shape.cpp  sphere.cpp
assignments/hw0/src/warp/: warptest.cpp
assignments/hw1/: CMakeLists.txt
assignments/hw1/include/nori/core/: scene.h
assignments/hw1/include/nori/emitters/: emitter.h  point.h
assignments/hw1/scenes/hw1/Final/: finalhw1-directional.xml
assignments/hw1/scenes/hw1/References/: sphere-directional-ref.exr  sphere-point-no-shadow-ref.exr  sphere-point-ref.exr
assignments/hw1/scenes/hw1/Tests/: sphere-directional.xml  sphere-point.xml
assignments/hw1/src/core/: scene.cpp
assignments/hw1/src/emitters/: directional.cpp  emitter.cpp  point.cpp
assignments/hw1/src/integrators/: simple.cpp
assignments/hw2/include/nori/emitters/: area.h
assignments/hw2/include/nori/integrators/: ao.h
assignments/hw2/scenes/Finals/: finalhw2-ao.xml  finalhw2-direct-area.xml  finalhw2-direct-hem.xml  finalhw2-direct-sa.xml  finalhw2-direct.xml
assignments/hw2/scenes/References/: sphere-ao.exr  sphere-area.exr  sphere-hemisphere.exr  sphere-solid.exr
assignments/hw2/scenes/Tests/: sphere-ao.xml  sphere-area.xml  sphere-hemisphere.xml  sphere-solid.xml
assignments/hw2/src/emitters/: area.cpp
assignments/hw2/src/integrators/: ao.cpp  direct.cpp
assignments/hw2/src/shapes/: shape.cpp
assignments/hw3/: CMakeLists.txt
assignments/hw3/include/nori/bsdfs/: phong.h
assignments/hw3/include/nori/core/: common.h
assignments/hw3/src/bsdfs/: mirror.cpp  phong.cpp
assignments/hw3/src/core/: common.cpp
assignments/hw3/src/warp/: mis.cpp
assignments/test/: CMakeLists.txt
assignments/test/ext/tinyformat/: tinyformat.h
assignments/test/src/core/: common.cpp  gui.cpp  main.cpp  math.cpp  parser.cpp
assignments/test/src/integrators/: direct.cpp
assignments/test/src/shapes/: object.cpp
assignments/test/src/warp/: ttest.cpp
ext/: CMakeLists.txt
ext/glew/: glew.pc
hw0/: sphere.cpp  sphere.h
include/glviewer/: camera.h  shader.h  shaderProgram.h  viewer.h
include/nori/accelerators/: accel.h
include/nori/bsdfs/: bsdf.h  diffuse.h  phong.h
include/nori/cameras/: camera.h  perspective.h
include/nori/core/: color.h  common.h  frame.h  math.h  object.h  parser.h  ray.h  rfilter.h  scene.h
include/nori/emitters/: directional.h  emitter.h  point.h
include/nori/integrators/: ao.h  direct.h  directMIS.h  integrator.h  normals.h  path.h  volPath.h
include/nori/mediums/: homogeneous.h  medium.h  phaseFunction.h
include/nori/phases/: isotropic.h  phaseFunction.h
include/nori/samplers/: sampler.h
include/nori/shapes/: mesh.h  object.h  shape.h  sphere.h
include/nori/warp/: mis.h  warp.h
scenes/bunny_phong/: bunny-phong.exr  bunny-phong.xml
scenes/cornellBox/: cornellbox.xml
scenes/hw0/Final/: finalhw0.exr
scenes/hw0/Tests/: sphere-mesh.exr
scenes/hw1/References/: sphere-directional-no-shadow-ref.exr  sphere-directional-ref.exr  sphere-point-ref.exr
scenes/hw1/Tests/: sphere-directional.xml  sphere-point.xml
scenes/hw2/References/: ajax-ao.exr  area.exr  solid-angle.exr  uniform.exr
scenes/hw2/Tests/: ajax-ao.xml  sphere-area.xml
scenes/sphere/: sphere-ao.xml  sphere-arealight.exr  sphere-arealight.xml  sphere.exr  sphere.xml
scenes/veach/: veach.exr  veach.xml
scenes/volume/: testVol.exr  testVol.xml
src/accelerators/: accel.cpp  bvh.cpp
src/bsdfs/: dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp  phong.cpp
src/cameras/: perspective.cpp
src/core/: chi2test.cpp  common.cpp  main.cpp  math.cpp  object.cpp  parser.cpp  rfilter.cpp  scene.cpp
src/emitters/: area.cpp  directional.cpp  point.cpp
src/glviewer/: camera.cpp  shader.cpp  shaderProgram.cpp  viewer.cpp
src/glviewer/shaders/: Diffuse.fg.glsl  Diffuse.vx.glsl  phong.fg.glsl  phong.vx.glsl
src/integrators/: ao.cpp  direct.cpp  directMIS.cpp  integrator.cpp  normals.cpp  path.cpp  simple.cpp  volPath.cpp
src/mediums/: homogeneous.cpp  medium.cpp  phaseFunction.cpp
src/phases/: isotropic.cpp
src/samplers/: independent.cpp
src/shapes/: mesh.cpp  obj.cpp  shape.cpp  sphere.cpp
src/warp/: mis.cpp  ttest.cpp  warp.cpp  warptest.cpp
(+19 files in other folders)
